[gd_scene load_steps=16 format=3 uid="uid://ccharselect3d"]

[ext_resource type="Script" path="res://scripts/ui/character_select_3d.gd" id="1_script"]
[ext_resource type="Shader" path="res://shaders/sky.gdshader" id="2_sky_shader"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_sky"]
shader = ExtResource("2_sky_shader")
shader_parameter/sky_top_color = Vector3(0.1, 0.15, 0.3)
shader_parameter/sky_horizon_color = Vector3(0.2, 0.25, 0.4)
shader_parameter/ground_bottom_color = Vector3(0.05, 0.08, 0.15)
shader_parameter/ground_horizon_color = Vector3(0.15, 0.18, 0.28)
shader_parameter/star_density = 0.5
shader_parameter/star_brightness = 1.0
shader_parameter/star_visibility = 0.8

[sub_resource type="Sky" id="Sky_charselect"]
sky_material = SubResource("ShaderMaterial_sky")

[sub_resource type="Environment" id="Environment_charselect"]
background_mode = 2
sky = SubResource("Sky_charselect")
ambient_light_source = 2
ambient_light_color = Color(0.3, 0.35, 0.45, 1)
ambient_light_energy = 0.5

[sub_resource type="PlaneMesh" id="PlaneMesh_floor"]
size = Vector2(20, 20)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_floor"]
albedo_color = Color(0.08, 0.07, 0.06, 1)
roughness = 0.9

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_panel"]
bg_color = Color(0.06, 0.07, 0.1, 0.92)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.55, 0.45, 0.33, 1)
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8
shadow_color = Color(0, 0, 0, 0.5)
shadow_size = 8
shadow_offset = Vector2(0, 4)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_button_normal"]
bg_color = Color(0.35, 0.29, 0.2, 1)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.55, 0.45, 0.33, 1)
corner_radius_top_left = 4
corner_radius_top_right = 4
corner_radius_bottom_right = 4
corner_radius_bottom_left = 4
content_margin_left = 16.0
content_margin_top = 10.0
content_margin_right = 16.0
content_margin_bottom = 10.0

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_button_hover"]
bg_color = Color(0.48, 0.39, 0.26, 1)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.83, 0.66, 0.29, 1)
corner_radius_top_left = 4
corner_radius_top_right = 4
corner_radius_bottom_right = 4
corner_radius_bottom_left = 4
content_margin_left = 16.0
content_margin_top = 10.0
content_margin_right = 16.0
content_margin_bottom = 10.0

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_button_pressed"]
bg_color = Color(0.25, 0.2, 0.14, 1)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.55, 0.45, 0.33, 1)
corner_radius_top_left = 4
corner_radius_top_right = 4
corner_radius_bottom_right = 4
corner_radius_bottom_left = 4
content_margin_left = 16.0
content_margin_top = 10.0
content_margin_right = 16.0
content_margin_bottom = 10.0

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_button_disabled"]
bg_color = Color(0.2, 0.18, 0.15, 0.5)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.3, 0.28, 0.25, 0.5)
corner_radius_top_left = 4
corner_radius_top_right = 4
corner_radius_bottom_right = 4
corner_radius_bottom_left = 4
content_margin_left = 16.0
content_margin_top = 10.0
content_margin_right = 16.0
content_margin_bottom = 10.0

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_button_delete_normal"]
bg_color = Color(0.4, 0.2, 0.18, 1)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.6, 0.35, 0.3, 1)
corner_radius_top_left = 4
corner_radius_top_right = 4
corner_radius_bottom_right = 4
corner_radius_bottom_left = 4
content_margin_left = 16.0
content_margin_top = 10.0
content_margin_right = 16.0
content_margin_bottom = 10.0

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_button_delete_hover"]
bg_color = Color(0.55, 0.25, 0.22, 1)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.8, 0.4, 0.35, 1)
corner_radius_top_left = 4
corner_radius_top_right = 4
corner_radius_bottom_right = 4
corner_radius_bottom_left = 4
content_margin_left = 16.0
content_margin_top = 10.0
content_margin_right = 16.0
content_margin_bottom = 10.0

[sub_resource type="Gradient" id="Gradient_particle"]
colors = PackedColorArray(0.83, 0.58, 0.29, 1, 0.83, 0.58, 0.29, 0)

[sub_resource type="GradientTexture1D" id="GradientTexture1D_particle"]
gradient = SubResource("Gradient_particle")

[node name="CharacterSelect3D" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_script")

[node name="SubViewportContainer" type="SubViewportContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
stretch = true

[node name="SubViewport" type="SubViewport" parent="SubViewportContainer"]
own_world_3d = true
transparent_bg = false
handle_input_locally = false
size = Vector2i(1920, 1080)
render_target_update_mode = 4

[node name="WorldEnvironment" type="WorldEnvironment" parent="SubViewportContainer/SubViewport"]
environment = SubResource("Environment_charselect")

[node name="Camera3D" type="Camera3D" parent="SubViewportContainer/SubViewport"]
transform = Transform3D(1, 0, 0, 0, 0.984808, 0.173648, 0, -0.173648, 0.984808, 0, 1.5, 5)
fov = 40.0

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="SubViewportContainer/SubViewport"]
transform = Transform3D(0.866025, -0.25, 0.433013, 0, 0.866025, 0.5, -0.5, -0.433013, 0.75, 2, 4, 2)
light_color = Color(1, 0.95, 0.85, 1)
light_energy = 1.0
shadow_enabled = true

[node name="FillLight" type="DirectionalLight3D" parent="SubViewportContainer/SubViewport"]
transform = Transform3D(0.866025, 0.25, -0.433013, 0, 0.866025, 0.5, 0.5, -0.433013, 0.75, -2, 3, 2)
light_color = Color(0.6, 0.7, 0.9, 1)
light_energy = 0.3

[node name="RimLight" type="DirectionalLight3D" parent="SubViewportContainer/SubViewport"]
transform = Transform3D(1, 0, 0, 0, 0.866025, -0.5, 0, 0.5, 0.866025, 0, 2, -3)
light_color = Color(0.83, 0.66, 0.29, 1)
light_energy = 0.5

[node name="Floor" type="MeshInstance3D" parent="SubViewportContainer/SubViewport"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0)
mesh = SubResource("PlaneMesh_floor")
surface_material_override/0 = SubResource("StandardMaterial3D_floor")

[node name="CharacterSlider" type="Node3D" parent="SubViewportContainer/SubViewport"]

[node name="ParticleEffect" type="GPUParticles2D" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
amount = 40
lifetime = 6.0
preprocess = 4.0
randomness = 0.6

[node name="Overlay" type="Control" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="TitleSection" type="VBoxContainer" parent="Overlay"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -200.0
offset_top = 25.0
offset_right = 200.0
offset_bottom = 90.0
grow_horizontal = 2
theme_override_constants/separation = 2

[node name="OrnamentTop" type="Label" parent="Overlay/TitleSection"]
layout_mode = 2
theme_override_colors/font_color = Color(0.6, 0.53, 0.4, 1)
theme_override_font_sizes/font_size = 12
text = "═══════ ⚔ ═══════"
horizontal_alignment = 1

[node name="ScreenTitle" type="Label" parent="Overlay/TitleSection"]
layout_mode = 2
theme_override_colors/font_color = Color(0.83, 0.66, 0.29, 1)
theme_override_font_sizes/font_size = 28
text = "SELECT CHARACTER"
horizontal_alignment = 1

[node name="OrnamentBottom" type="Label" parent="Overlay/TitleSection"]
layout_mode = 2
theme_override_colors/font_color = Color(0.6, 0.53, 0.4, 1)
theme_override_font_sizes/font_size = 12
text = "═══════════════════"
horizontal_alignment = 1

[node name="TopInfo" type="PanelContainer" parent="Overlay"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -180.0
offset_top = 100.0
offset_right = 180.0
offset_bottom = 175.0
grow_horizontal = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_panel")

[node name="InfoMargin" type="MarginContainer" parent="Overlay/TopInfo"]
layout_mode = 2
theme_override_constants/margin_left = 15
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 15
theme_override_constants/margin_bottom = 10

[node name="InfoVBox" type="VBoxContainer" parent="Overlay/TopInfo/InfoMargin"]
layout_mode = 2
theme_override_constants/separation = 4

[node name="CharacterName" type="Label" parent="Overlay/TopInfo/InfoMargin/InfoVBox"]
layout_mode = 2
theme_override_colors/font_color = Color(0.91, 0.89, 0.86, 1)
theme_override_font_sizes/font_size = 24
text = "Character Name"
horizontal_alignment = 1

[node name="CharacterDetails" type="Label" parent="Overlay/TopInfo/InfoMargin/InfoVBox"]
layout_mode = 2
theme_override_colors/font_color = Color(0.6, 0.53, 0.4, 1)
theme_override_font_sizes/font_size = 14
text = "Lv.1 Warrior - Shinsoo"
horizontal_alignment = 1

[node name="LeftArrow" type="Label" parent="Overlay"]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 40.0
offset_top = -35.0
offset_right = 100.0
offset_bottom = 35.0
grow_vertical = 2
theme_override_colors/font_color = Color(0.83, 0.66, 0.29, 1)
theme_override_font_sizes/font_size = 56
text = "<"
horizontal_alignment = 1
vertical_alignment = 1

[node name="RightArrow" type="Label" parent="Overlay"]
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -100.0
offset_top = -35.0
offset_right = -40.0
offset_bottom = 35.0
grow_horizontal = 0
grow_vertical = 2
theme_override_colors/font_color = Color(0.83, 0.66, 0.29, 1)
theme_override_font_sizes/font_size = 56
text = ">"
horizontal_alignment = 1
vertical_alignment = 1

[node name="CreatePrompt" type="VBoxContainer" parent="Overlay"]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -120.0
offset_top = -40.0
offset_right = 120.0
offset_bottom = 40.0
grow_horizontal = 2
grow_vertical = 2
alignment = 1

[node name="PlusIcon" type="Label" parent="Overlay/CreatePrompt"]
layout_mode = 2
theme_override_colors/font_color = Color(0.6, 0.53, 0.4, 0.6)
theme_override_font_sizes/font_size = 48
text = "+"
horizontal_alignment = 1

[node name="CreateText" type="Label" parent="Overlay/CreatePrompt"]
layout_mode = 2
theme_override_colors/font_color = Color(0.6, 0.53, 0.4, 1)
theme_override_font_sizes/font_size = 16
text = "Create New Character"
horizontal_alignment = 1

[node name="CreateHint" type="Label" parent="Overlay/CreatePrompt"]
layout_mode = 2
theme_override_colors/font_color = Color(0.6, 0.53, 0.4, 0.6)
theme_override_font_sizes/font_size = 12
text = "Press Enter"
horizontal_alignment = 1

[node name="SlotIndicators" type="HBoxContainer" parent="Overlay"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -80.0
offset_top = -100.0
offset_right = 80.0
offset_bottom = -70.0
grow_horizontal = 2
grow_vertical = 0
alignment = 1
theme_override_constants/separation = 20

[node name="Instructions" type="Label" parent="Overlay"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -250.0
offset_top = -55.0
offset_right = 250.0
offset_bottom = -30.0
grow_horizontal = 2
grow_vertical = 0
theme_override_colors/font_color = Color(0.6, 0.53, 0.4, 0.7)
theme_override_font_sizes/font_size = 13
text = "< >  Navigate    |    Enter  Select    |    Drag  Rotate    |    Esc  Back"
horizontal_alignment = 1
vertical_alignment = 1

[node name="BottomButtons" type="HBoxContainer" parent="Overlay"]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 25.0
offset_top = -65.0
offset_right = 280.0
offset_bottom = -25.0
grow_vertical = 0
theme_override_constants/separation = 12

[node name="BackButton" type="Button" parent="Overlay/BottomButtons"]
custom_minimum_size = Vector2(110, 38)
layout_mode = 2
theme_override_colors/font_color = Color(0.91, 0.89, 0.86, 1)
theme_override_colors/font_hover_color = Color(1, 1, 1, 1)
theme_override_colors/font_pressed_color = Color(0.8, 0.8, 0.8, 1)
theme_override_font_sizes/font_size = 14
theme_override_styles/normal = SubResource("StyleBoxFlat_button_normal")
theme_override_styles/hover = SubResource("StyleBoxFlat_button_hover")
theme_override_styles/pressed = SubResource("StyleBoxFlat_button_pressed")
theme_override_styles/disabled = SubResource("StyleBoxFlat_button_disabled")
text = "BACK"

[node name="DeleteButton" type="Button" parent="Overlay/BottomButtons"]
custom_minimum_size = Vector2(110, 38)
layout_mode = 2
theme_override_colors/font_color = Color(0.91, 0.89, 0.86, 1)
theme_override_colors/font_hover_color = Color(1, 1, 1, 1)
theme_override_colors/font_pressed_color = Color(0.8, 0.8, 0.8, 1)
theme_override_colors/font_disabled_color = Color(0.5, 0.5, 0.5, 0.5)
theme_override_font_sizes/font_size = 14
theme_override_styles/normal = SubResource("StyleBoxFlat_button_delete_normal")
theme_override_styles/hover = SubResource("StyleBoxFlat_button_delete_hover")
theme_override_styles/pressed = SubResource("StyleBoxFlat_button_pressed")
theme_override_styles/disabled = SubResource("StyleBoxFlat_button_disabled")
disabled = true
text = "DELETE"

[node name="EnterButton" type="Button" parent="Overlay"]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -170.0
offset_top = -65.0
offset_right = -25.0
offset_bottom = -25.0
grow_horizontal = 0
grow_vertical = 0
theme_override_colors/font_color = Color(0.91, 0.89, 0.86, 1)
theme_override_colors/font_hover_color = Color(1, 1, 1, 1)
theme_override_colors/font_pressed_color = Color(0.8, 0.8, 0.8, 1)
theme_override_colors/font_disabled_color = Color(0.5, 0.5, 0.5, 0.5)
theme_override_font_sizes/font_size = 16
theme_override_styles/normal = SubResource("StyleBoxFlat_button_normal")
theme_override_styles/hover = SubResource("StyleBoxFlat_button_hover")
theme_override_styles/pressed = SubResource("StyleBoxFlat_button_pressed")
theme_override_styles/disabled = SubResource("StyleBoxFlat_button_disabled")
text = "ENTER WORLD"

[node name="VersionLabel" type="Label" parent="Overlay"]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -70.0
offset_top = -20.0
offset_right = -10.0
offset_bottom = -5.0
grow_horizontal = 0
grow_vertical = 0
theme_override_colors/font_color = Color(0.6, 0.53, 0.4, 0.4)
theme_override_font_sizes/font_size = 11
text = "v0.1.0"
horizontal_alignment = 2

[node name="DeleteDialog" type="ConfirmationDialog" parent="."]
title = "Delete Character"
initial_position = 2
size = Vector2i(400, 180)
ok_button_text = "Delete"

[node name="VBox" type="VBoxContainer" parent="DeleteDialog"]
offset_left = 8.0
offset_top = 8.0
offset_right = 392.0
offset_bottom = 130.0
theme_override_constants/separation = 10

[node name="WarningLabel" type="Label" parent="DeleteDialog/VBox"]
layout_mode = 2
theme_override_colors/font_color = Color(0.91, 0.33, 0.33, 1)
text = "This action cannot be undone!"
horizontal_alignment = 1

[node name="InstructionLabel" type="Label" parent="DeleteDialog/VBox"]
layout_mode = 2
text = "Type the character name to confirm:"
horizontal_alignment = 1

[node name="NameInput" type="LineEdit" parent="DeleteDialog/VBox"]
layout_mode = 2
placeholder_text = "Type character name..."
